--- a/external/source/src/styles/stats.css
+++ b/external/source/src/styles/stats.css
@@ -1,55 +1,27 @@
-.statheader {
-  width: 100%;
-  margin: 1px;
-  padding: 10px;
-  background: rgba(255, 255, 255, 0.9);
-  height: auto;
-  position: relative;
-  border-radius: 2px;
-  transition: all 0.1s ease;
-  box-shadow: 1px 2px 1px rgba(0, 0, 0, 0.1);
-  display: flex;
-  justify-content: space-between;
-  overflow: hidden;
-  flex-wrap: wrap;
-}
-
 .stats {
   width: 100%;
-  max-width: calc(50% - 10px);
+  max-width: 490px;
   background: #ffffff;
   border-radius: 2px;
+  padding: 10px;
   margin: 5px;
-  height: 400px;
-  box-sizing: border-box;
-  padding: 10px 10px 80px;
+  height: 300px;
 }
 
-.stats__label {
-  font-size: 18px;
-  font-weight: 500;
-  margin-bottom: 10px;
-  padding: 0 10px;
-  text-align: right;
-}
-
-.statistic__filters {
+.stats-full {
   width: 100%;
-  margin: 5px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  background: #ffffff;
+  border-radius: 2px;
+  padding: 10px;
+  margin: 5px 10px;
+  height: 300px;
 }
 
-.statistic__filters__item {
-  width: 40%;
-}
-
-.stats__apply-filter {
-  height: 40px;
-  width: 100px;
-}
-
-.Select-control {
-  margin: 0;
+@media (max-width: 1080px) {
+  .stats {
+    max-width: 100%;
+  }
+  .stats-full {
+    margin: 5px;
+  }
 }
