--- a/external/source/src/styles/topbar.css
+++ b/external/source/src/styles/topbar.css
@@ -55,9 +55,8 @@
 }
 
 .topbar__menu--btn {
-  font-size: 20px;
   text-decoration: none;
-  padding: 0;
+  padding: 0 10px;
   width: 50px;
   background: red;
   color: #ffffff;
@@ -71,12 +70,8 @@
   transition: all 0.2s;
 }
 
-.topbar__menu--btn svg {
-  transition: all 0.2s;
-}
-
-.topbar__menu--btn:hover svg {
-  transform: scale(1.4);
+.topbar__menu--btn:hover {
+  opacity: 0.7;
 }
 
 .topbar__menu--active {
